Keep scheduled catalog updates off workflow files (#116)
* Quiet JDK 25 Unsafe warnings and drop deprecated -Xlint.

--add-opens does not silence JEP 498; pass --sun-misc-unsafe-memory-access=allow
in .sbtopts (repo and example) and scriptedLaunchOpts. Scala 3.8 treats -Xlint
as deprecated, so remove -Xlint:-classpath.

* Keep the version-updates companion off workflow files.

GITHUB_TOKEN cannot push .github/workflows. Parameterize JDK and runner via
project/zipx-ci.env, reuse zipx-sbt-setup, run zipxCatalogGenerate, and
exclude workflows from git add.

* Spell out why the catalog companion never writes workflow files.

The constraint was buried in one paragraph, README still said zipxWorkflowGenerate
after Action bumps, and Versions still claimed generate rewrites workflows.